dev: table view

--- a/BOKiN/Storyboard/Base.lproj/Main.storyboard
+++ b/BOKiN/Storyboard/Base.lproj/Main.storyboard
@@ -52,10 +52,10 @@
             </objects>
             <point key="canvasLocation" x="397.60000000000002" y="-530.28485757121439"/>
         </scene>
-        <!--News-->
+        <!--DisasterDetail-->
         <scene sceneID="4MD-gD-SI4">
             <objects>
-                <viewControllerPlaceholder storyboardName="News" id="VGQ-GO-0nQ" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="DisasterDetail" id="VGQ-GO-0nQ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Ui-4m-cRS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="964" y="-531"/>
