--- a/BOKiN/Storyboard/DisasterDetail.storyboard
+++ b/BOKiN/Storyboard/DisasterDetail.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mra-jJ-AZJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nOu-bj-OdD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,102 +11,35 @@
     </dependencies>
     <scenes>
         <!--Disaster Detail View Controller-->
-        <scene sceneID="Wu9-HQ-k6o">
+        <scene sceneID="luA-Rn-Wvx">
             <objects>
-                <viewController id="mra-jJ-AZJ" customClass="DisasterDetailViewController" customModule="BOKiN" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Sjv-vY-Arz">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="800"/>
+                <viewController id="nOu-bj-OdD" customClass="DisasterDetailViewController" customModule="BOKiN" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2CP-Yg-HtF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gIb-vS-LSn">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="800"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="disaster" translatesAutoresizingMaskIntoConstraints="NO" id="r94-Dj-4FW">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="416"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="416" id="QCa-sH-gBL"/>
-                                        </constraints>
-                                    </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t31-51-V6W">
-                                        <rect key="frame" x="0.0" y="416" width="375" height="15"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="15" id="Xdh-KZ-egH"/>
-                                        </constraints>
-                                    </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="九州雨北部で未曾有の豪雨" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWL-qG-srT">
-                                        <rect key="frame" x="0.0" y="431" width="375" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="7PC-mq-CHm"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018/11/22 17:57:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O6x-86-cYW">
-                                        <rect key="frame" x="0.0" y="461" width="375" height="39"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wjt-4C-X8E">
-                                        <rect key="frame" x="0.0" y="500" width="375" height="10"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="10" id="6wW-nU-q8t"/>
-                                        </constraints>
-                                    </view>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" text="福岡県によると、6日頬6時時点で県内の冠水や土砂流入などによる道路被害は24市町の172件。土砂崩れなどの土砂災害は19市町の302件となっている。避難指示は約17万3千世帯、約37万9千人に出され、福岡市内では57ヶ所に621人が避難した。" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UE8-VN-kaW">
-                                        <rect key="frame" x="0.0" y="510" width="375" height="150"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="150" id="Rbz-Oq-xCp"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
-                                        </userDefinedRuntimeAttributes>
-                                    </textView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wkd-5I-yaY">
-                                        <rect key="frame" x="0.0" y="660" width="375" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="NTo-s1-zJG"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <state key="normal" title="募金する"/>
-                                    </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xug-DH-gTG">
-                                        <rect key="frame" x="0.0" y="710" width="375" height="90"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="90" id="nxF-dp-Li2"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fee-Yx-FVo">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="gIb-vS-LSn" firstAttribute="bottom" secondItem="8qp-h9-ebe" secondAttribute="bottom" id="Vth-Hz-j4n"/>
-                            <constraint firstItem="gIb-vS-LSn" firstAttribute="trailing" secondItem="8qp-h9-ebe" secondAttribute="trailing" id="fmX-uM-rUu"/>
-                            <constraint firstItem="gIb-vS-LSn" firstAttribute="top" secondItem="Sjv-vY-Arz" secondAttribute="top" id="iWy-38-pCp"/>
-                            <constraint firstItem="gIb-vS-LSn" firstAttribute="leading" secondItem="8qp-h9-ebe" secondAttribute="leading" id="pKN-RD-UAV"/>
+                            <constraint firstItem="fee-Yx-FVo" firstAttribute="leading" secondItem="1Mo-rd-ma4" secondAttribute="leading" id="A7t-I9-K14"/>
+                            <constraint firstItem="fee-Yx-FVo" firstAttribute="top" secondItem="2CP-Yg-HtF" secondAttribute="top" id="J6R-gf-Udo"/>
+                            <constraint firstItem="fee-Yx-FVo" firstAttribute="bottom" secondItem="1Mo-rd-ma4" secondAttribute="bottom" id="h6Q-4O-u44"/>
+                            <constraint firstItem="fee-Yx-FVo" firstAttribute="trailing" secondItem="1Mo-rd-ma4" secondAttribute="trailing" id="q2o-QT-BoU"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="8qp-h9-ebe"/>
+                        <viewLayoutGuide key="safeArea" id="1Mo-rd-ma4"/>
                     </view>
-                    <size key="freeformSize" width="375" height="800"/>
+                    <navigationItem key="navigationItem" id="MWq-Yb-b5d"/>
                     <connections>
-                        <outlet property="bokinButton" destination="Wkd-5I-yaY" id="oux-Rt-2PN"/>
-                        <outlet property="disasterDetailDescription" destination="UE8-VN-kaW" id="vnT-la-z23"/>
+                        <outlet property="disasterDetailTableView" destination="fee-Yx-FVo" id="Shm-aX-DXU"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XX1-aZ-KUc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pNV-B7-Wkv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5.5999999999999996" y="-394.45277361319341"/>
+            <point key="canvasLocation" x="1133.5999999999999" y="-587.85607196401804"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="disaster" width="191.52000427246094" height="123.83999633789062"/>
-    </resources>
 </document>
